Revision history for Sub-Name

{{$NEXT}}

0.16      2016-06-21 03:41:40Z (TRIAL RELEASE)
    - support binary and unicode symbol names (Leon Timmermans, Aristotle
      Pagaltzis, Peter Rabbitson, Reini Urban, PR#8)

0.15      2016-03-15 22:17:38Z
    - fix uninitialized warning in test on perls < 5.8.6 (RT#104510)
    - repository moved to the github p5sagit organization (the primary is on
      shadowcat, mirrored to github)

0.14      2015-04-24 03:26:54Z
    - remove mandatory dependencies for optional test
    - mark the test with B::C as TODO, as it seems to fail frequently and
      should not block normal installations

0.13      2015-03-28 06:27:23Z
    - fix optional test of interaction with B::C that sometimes invalidly
      failed

0.12      2014-09-04 07:28:59Z
    - fix licence in LICENSE and pod

0.11      2014-08-20 04:44:25Z (TRIAL RELEASE)
    - move variable declaration to fix warning under
      -Werror=declaration-after-statement, to allow compilation under MSVC
      (J.R.Mash, github #3)

0.10      2014-08-16 00:46:35Z (TRIAL RELEASE)
    - converted distribution packaging to Dist::Zilla

0.09      2014-08-09
    - Copy the contents of the %DB::sub entry if it exists; fixes
      Devel::NYTProf's anon sub handling (RT#50524, ilmari)

0.08      2014-08-04
    - Fix leak when setting a fully-qualified name (ilmari, github#1)

0.07      2014-07-11
    - skip optional test if B::C 1.48 is not installed (Reini Urban)

0.06      2014-07-10
    - Do not change the string arg in XS, use copy instead. Fixes perlcc -O3
      RT#96893 (Reini Urban)
    - add README make target
    - add more distribution metadata

0.05      2010-09-07 22:51:00Z
    - Stop using the padlist to refcount GVs. Instead use regular magic. This
      allows various modules, including B::Deparse, to safely peek into pads of
      (re)named subs (Closes RT#42725) (Goro Fuji).
    - Support perl >= 5.13.3 by using the new CvGV_set interface there
      (Closes RT#59558).