@@ -1,6 +1,8 @@
 Revision history for Sub-Name
 
 {{$NEXT}}
+    - fixed parsing error where the name contains a single colon but the last
+      separator is :: (Leon Timmermans)
 
 0.16      2016-06-21 03:41:40Z (TRIAL RELEASE)
     - support binary and unicode symbol names (Leon Timmermans, Aristotle
